13-May-2017 Fixes #332. Mingw assembler support now working. AssemblerTest1 example also now builds with Mingw.

11-May-2017 ======== Version 1.1.1 beta 2 Release ========

10-May-2017 Fixes #330. Adding an empty string to a C Container AddFiles() function resulted in a general exception.

10-May-2017 Fixes #329. Assembler settings interfaces now includes the Bits (C.EBit type) to distinguish between 32-bit and 64-bit builds.

09-May-2017 Fixes #328. Modules without Settings will now throw an exception if they only have private patches. Those with public patches are allowed, since these affect other modules that depend on them.

04-May-2017 Fixes #325. Assembler source file support in VisualStudio projects now uses MASM configurations, rather than custom build rules.

03-May-2017 Fixes #327. VisualCCommon.ICommonAssemblerSettings and ICommonLinkerSettings now have a SafeExceptionHandlers boolean option (defaults to true for both). This is only required in 32-bit builds, mostly with assembler code. See MSDN for details.

03-May-2017 Fixes #324. Path for the assembler tool (ml) in VisualC now fixed for VisualStudio 2017. Added new test, AssemblerTest1, to exercise the fix.

01-May-2017 Fixes #326. Xcode projects would not be buildable in the situation with source files with a mixed setting of ClangCommon.ICommonCompilerSettings.Pedantic and a compiler warning suppression, such as -Wno-long-long, that is included in the pedantic warnings. This was due per-file settings being used for pedantic, and this was appearing after the warning suppressions, hence re-enabling them. In these circumstances, projects are now generated with -Wpedantic in the build settings, and per-file -Wno-pedantic where necessary. Added a new test, DeltaSettingsTest2 to exercise this fix.
