@@ -10,6 +10,7 @@
     <Package name="Clang" version="Xcode8" default="true" />
     <Package name="Gcc" version="4.8" default="true" />
     <Package name="Gcc" version="5.4" />
+    <Package name="MakeFileBuilder" />
     <Package name="NativeBuilder" />
     <Package name="VisualC" version="10.0" />
     <Package name="VisualC" version="11.0" />
