@@ -109,8 +109,8 @@ def configure_repository():
                                               linux={"Native": [gcc64, gcc32], "MakeFile": [gcc64, gcc32]},
                                               osx={"Native": [clang64, clang32], "MakeFile": [clang64, clang32], "Xcode": [clang64, clang32]})
     configs["DeltaSettingsTest2"] = TestSetup(win={"Native": [visualc64, visualc32], "VSSolution": [visualc64, visualc32]},
-                                              linux={"Native": [gcc64, gcc32]},
-                                              osx={"Native": [clang64, clang32], "Xcode": [clang64, clang32]})
+                                              linux={"Native": [gcc64, gcc32], "MakeFile": [gcc64, gcc32]},
+                                              osx={"Native": [clang64, clang32], "MakeFile": [clang64, clang32], "Xcode": [clang64, clang32]})
     configs["AssemblerTest1"] = TestSetup(win={"Native": [visualc64, visualc32, mingw32], "VSSolution": [visualc64, visualc32]},
                                           linux={"Native": [gcc64, gcc32], "MakeFile": [gcc64, gcc32]},
                                           osx={"Native": [clang64, clang32], "MakeFile": [clang64, clang32], "Xcode": [clang64, clang32]})
